--- a/specglavi/MainWindow.xaml
+++ b/specglavi/MainWindow.xaml
@@ -14,30 +14,76 @@
     <Grid Margin="0">
         <Grid x:Name="mainfield" Visibility="Visible">
             <Grid.RowDefinitions>
-                <RowDefinition Height="206*"/>
-                <RowDefinition Height="513*"/>
+                <RowDefinition Height="0*"/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Canvas x:Name="scene" HorizontalAlignment="Left" Height="676" VerticalAlignment="Top" Width="972" Margin="10,33,0,0" Grid.RowSpan="2"/>
-            <Button x:Name="Start" Content="Start" HorizontalAlignment="Left" Height="21" Margin="10,7,0,0" VerticalAlignment="Top" Width="113" Click="Start_Click"/>
-            <Button x:Name="Pause" Content="Pause" HorizontalAlignment="Left" Height="21" Margin="128,7,0,0" VerticalAlignment="Top" Width="106"/>
-            <Button x:Name="Reset" Content="Reset" HorizontalAlignment="Left" Height="21" Margin="234,7,0,0" VerticalAlignment="Top" Width="113" Click="Reset_Click"/>
-            <Button x:Name="Options" Content="Options" HorizontalAlignment="Left" Height="18" Margin="352,10,0,0" VerticalAlignment="Top" Width="127" Click="Options_Click"/>
-            <Image Margin="1395,189,-451,276" Source="12 TANGOS.gif" Stretch="Fill" Grid.Row="1"/>
-            <Image Margin="1395,189,-451,276" Source="roflanRibalo.png" Stretch="Fill" Grid.Row="1"/>
-            <Image Margin="1395,189,-451,276" Source="FAST_AND_FURIOUS.png" Stretch="Fill" Grid.Row="1"/>
-            <Button x:Name="NextRound" Content="Next" HorizontalAlignment="Left" Margin="508,10,0,0" VerticalAlignment="Top" Width="75" Click="NextRound_Click1"/>
+            <Canvas x:Name="scene" HorizontalAlignment="Right" Height="750" VerticalAlignment="Top" Width="1000" Margin="-4,-3,-4,-28" Grid.RowSpan="2"/>
+            <Button x:Name="Normal" Content="" Height="120" Width="288" Canvas.Left="95" Canvas.Top="369" Margin="120,356,584,243" Grid.Row="1" Click="Normal_Click" d:IsHidden="True">
+                <Button.Background>
+                    <ImageBrush ImageSource="pictures/NORMAL.gif"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="Egoism" Content="" Height="120" Width="288" Canvas.Left="526" Canvas.Top="369" Margin="584,356,120,243" Grid.Row="1" Click="Egoism_Click" d:IsHidden="True">
+                <Button.Background>
+                    <ImageBrush ImageSource="pictures/EGOISM.gif"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="credits" Content="" Height="120" Width="288" Canvas.Left="66" Canvas.Top="564" Margin="54,510,650,91" Grid.Row="1">
+                <Button.Background>
+                    <ImageBrush ImageSource="pictures/CREDITSBUTTON.gif"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="Start" Content="" HorizontalAlignment="Left" Height="120" Margin="54,170,0,0" VerticalAlignment="Top" Width="288" Click="Start_Click" Grid.Row="1">
+                <Button.Background>
+                    <ImageBrush ImageSource="pictures/PLAYBUTTON.gif"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="Menu" Content="" HorizontalAlignment="Left" Height="120" Margin="350,589,0,0" VerticalAlignment="Top" Width="288" Grid.Row="1" Click="Menu_Click" d:IsHidden="True">
+                <Button.Background>
+                    <ImageBrush ImageSource="pictures/OKBOOMER.gif"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="Options" Content="" HorizontalAlignment="Left" Height="120" Margin="54,340,0,0" VerticalAlignment="Top" Width="288" Click="Options_Click" Grid.Row="1">
+                <Button.Background>
+                    <ImageBrush ImageSource="pictures/OPTIONSBUTTON.gif"/>
+                </Button.Background>
+            </Button>
+
             <Grid x:Name="chart" HorizontalAlignment="Left" Height="676" VerticalAlignment="Top" Width="972" Margin="10,43,0,0" IsHitTestVisible="False" Grid.RowSpan="2" Visibility="Hidden">
+                
                 <oxy:Plot Title="{Binding Title}" Margin="24,0,10,48" d:IsHidden="True">
-                    <oxy:LineSeries ItemsSource="{Binding fastf}"/>
-                    <oxy:LineSeries ItemsSource="{Binding staminaf}"/>
-                    <oxy:LineSeries ItemsSource="{Binding tango}"/>
+                    <oxy:Plot.Series>
+                         <oxy:LineSeries ItemsSource="{Binding fastf}"/>
+                         <oxy:LineSeries ItemsSource="{Binding staminaf}"/>
+                         <oxy:LineSeries ItemsSource="{Binding tango}"/>
+                    </oxy:Plot.Series>
                 </oxy:Plot>
 
             </Grid>
         </Grid>
+        <Button x:Name="NextRound" Content="" HorizontalAlignment="Left" Margin="354,277,0,0" VerticalAlignment="Top" Width="288" Click="NextRound_Click1" Height="120">
+            <Button.Background>
+                <ImageBrush ImageSource="pictures/NEXT.gif"/>
+            </Button.Background>
+        </Button>
+        <TextBox x:Name="Fish1" HorizontalAlignment="Left" Height="69" Margin="70,492,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="236" d:IsHidden="True">
+            <TextBox.Background>
+                <ImageBrush ImageSource="pictures/TEXTBOX.gif"/>
+            </TextBox.Background>
+        </TextBox>
+        <TextBox x:Name="Fish2" HorizontalAlignment="Left" Height="69" Margin="375,492,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="236" d:IsHidden="True">
+            <TextBox.Background>
+                <ImageBrush ImageSource="pictures/TEXTBOX.gif"/>
+            </TextBox.Background>
+        </TextBox>
+        <TextBox x:Name="weeeeeed" HorizontalAlignment="Left" Height="69" Margin="680,492,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="236" d:IsHidden="True">
+            <TextBox.Background>
+                <ImageBrush ImageSource="pictures/TEXTBOX.gif"/>
+            </TextBox.Background>
+        </TextBox>
 
     </Grid>
 </Window>
